# PD_Charger

./: #auto_saved_files#  .gitmodules  3v3_Regulator.kicad_sch  PD Charger-B_Cu.gbr  PD Charger-B_Mask.gbr  PD Charger-B_Paste.gbr  PD Charger-B_Silkscreen.gbr  PD Charger-Edge_Cuts.gbr  PD Charger-F_Cu.gbr  PD Charger-F_Mask.gbr  PD Charger-F_Paste.gbr  PD Charger-F_Silkscreen.gbr  PD Charger-In1_Cu.gbr  PD Charger-In2_Cu.gbr  PD Charger-NPTH.drl  PD Charger-PTH.drl  PD Charger-job.gbrjob  PD Charger.kicad_pcb  PD Charger.kicad_prl  PD Charger.kicad_pro  PD Charger.kicad_sch  PD Charger.kicad_sch-bak  Power_Core.kicad_sch  Processor.kicad_sch  README.md  Regulator_Controller.kicad_sch  USBC_Output.kicad_sch  _autosave-PD Charger.kicad_sch  fp-info-cache  ~PD Charger.kicad_pcb.lck
KiCad/: #auto_saved_files#  3v3_regulator.kicad_sch  5V_regulator.kicad_sch  PD Charger-B_Mask.gbr  PD Charger-B_Paste.gbr  PD Charger-Edge_Cuts.gbr  PD Charger-F_Cu.gbr  PD Charger-F_Silkscreen.gbr  PD Charger-In2_Cu.gbr  PD Charger-NPTH.drl  PD Charger.kicad_dru  PD Charger.kicad_pcb  PD Charger.kicad_prl  PD Charger.kicad_pro  PD Charger.kicad_sch  PD Charger.kicad_sch-bak  PD Charger.net  PD Charger_production.kicad_pcb  README.md  _autosave-PD Charger.kicad_sch  dc-dc.kicad_sch  dc-dc.kicad_sch-bak  fp-info-cache  fp-lib-table  input.kicad_sch  input.kicad_sch-bak  mcu.kicad_sch  output.kicad_sch  sym-lib-table  usb-c.kicad_sch  ~PD Charger.kicad_pcb.lck
KiCad/ETQ_P3M100KVP/: PCC-M0530M-LP.step
KiCad/Gerber Export/: PD Charger-B_Cu.gbr  PD Charger-B_Mask.gbr  PD Charger-B_Paste.gbr  PD Charger-B_Silkscreen.gbr  PD Charger-Edge_Cuts.gbr  PD Charger-F_Cu.gbr  (+8 more)
Library.pretty/: PinSocket_2x05_P2.54mm_Vertical.kicad_mod  QFN-24_EP_4x4_Pitch0.5mm.kicad_mod  RNX0012B.kicad_mod
Media/: Buck-Boost Converter Efficiency.xlsx
RustFirmware/: Cargo.toml  README.md
RustFirmware/.cargo/: config.toml
RustFirmware/src/: lib.rs
(+250 files in other folders)
