[package]
name = "pd_charger"
version = "0.1.0"
edition = "2021"


# See more Cargo keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# the async runtime in use
# - usage reference: https://github.com/cbiffle/lilos/blob/main/doc/intro.adoc#anatomy-of-a-simple-main
# - API reference: https://docs.rs/lilos/latest/lilos/
lilos = "1.2.0"


# Changed to stm32g431cb feature to match the chip name.
# - embassy docs for this chip: https://docs.embassy.dev/embassy-stm32/git/stm32g431cb/index.html
embassy-stm32 = { version = "0.1.0", features = [ "stm32g431cb", "time", "time-driver-tim2", "defmt", "memory-x", "unstable-pac", "exti"]  }
# generic-queue-* is required for some reason 
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000", "generic-queue-32"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }

static_cell = "2.0.0"

usbd-hid = "0.7.0"
fusb302b = "0.0.1"


# embassy crate's not used since we're using lilOS
# embassy-sync = { version = "0.5.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.0" }
# embassy-usb = { version = "0.1.0", features = ["defmt"] }
# embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
# embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

# probably not needed (hopefully not needed, ew)
# embedded-hal-v02 = { version="0.2.6", features = ["unproven"], package = "embedded-hal" }
